--- a/src/makefile
+++ b/src/makefile
@@ -9,7 +9,7 @@ host: host.c
 	gcc host.c -o host
 
 obfuscated:
-	../tools/obfuscator.sh sam-ael.c
+	../tools/obfuscator/obfuscator.sh sam-ael.c
 	make all
 	mv sam-ael.c.bak sam-ael.c
 
