added debug option in makefiles && removed unused function prototype & variable

--- a/src/makefile
+++ b/src/makefile
@@ -5,6 +5,10 @@ samael: samael.c
 	gcc -ldl samael.c -o samael
 	cp /bin/ls ./test
 
+debug: samael.c
+	gcc -ggdb3 -Og -Wall -ldl samael.c -o samael
+	cp /bin/ls ./test
+
 obfuscated:
 	../tools/obfuscator/obfuscator.sh samael.c
 	make all
