added use of hide-strings in makefile (still WIP)

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 default: samael.c
-	gcc -ldl samael.c -o samael
+	gcc -g -ldl samael.c -o samael
 	cp /bin/ls ./test
 
 debug: samael.c
@@ -11,11 +11,15 @@ obfuscated:
 	cp ../tools/anti-debug/anti-debug.h ../tools/anti-debug/anti-debug.h.bak
 	../tools/obfuscator/obfuscator.sh ../tools/anti-debug/anti-debug.h
 	echo '#include "../tools/anti-debug/anti-debug.h"' >> samael.c
+	cp ../tools/hide-strings/hide-strings.h ../tools/hide-strings/hide-strings.h.bak
+	#../tools/obfuscator/obfuscator.sh ../tools/hide-strings/hide-strings.h
+	../tools/hide-strings/hide-strings.sh samael.c
 	make
 	../tools/anti-debug/anti-debug.sh
 	make clean; make
 	strip --strip-all samael
 	mv samael.c.bak samael.c
+	mv ../tools/hide-strings/hide-strings.h.bak ../tools/hide-strings/hide-strings.h
 	mv ../tools/anti-debug/anti-debug.h.bak ../tools/anti-debug/anti-debug.h
 
 clean:
